URL correction and header z-index correction

--- a/front/src/components/Header/Header.scss
+++ b/front/src/components/Header/Header.scss
@@ -85,6 +85,8 @@
     padding-right: 0.6rem;
     padding-top: 0.6rem;
 
+    z-index: -1;
+
     &__facebook {
       width: 1.5%;
 
@@ -111,8 +113,7 @@
 
     &__logo-container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
       position: relative;
       top: 0.5rem;
       width: 50%;
@@ -139,7 +140,6 @@
           padding: 0 2rem;
 
           &__link {
-            font-size: 0.9rem;
             text-transform: uppercase;
             text-decoration: none;
 
@@ -163,7 +163,6 @@
 
           /** Connection **/
           &__connection {
-            font-size: 0.9rem;
             text-transform: uppercase;
             text-decoration: none;
             transition: 0.25s;
@@ -189,7 +188,6 @@
           }
 
           &__register {
-            font-size: 0.9rem;
             text-transform: uppercase;
             text-decoration: none;
             transition: 0.25s;
@@ -228,7 +226,6 @@
 
           &__profil-link {
             display: flex;
-            font-size: 0.9rem;
             text-transform: uppercase;
             text-decoration: none;
             letter-spacing: 0.2rem;
@@ -323,7 +320,6 @@
               position: relative;
               bottom: 4px;
               padding-left: 0.1rem;
-              font-size: 0.9rem;
             }
             &__img {
               width: 30%;
@@ -399,7 +395,6 @@
                       width: 75%;
                       margin: 0.4rem 0rem;
                       padding-left: 1rem;
-                      font-size: 0.8rem;
                       &__infos {
                         display: flex;
                         width: 100%;
